# StaticViz

./: README.md  draft.html  draft.md  milestone2.ipynb  proposal.md  pyproject.toml
Data/: annual-change-renewables.csv  co-emissions-by-sector.csv  co2-emissions-vs-gdp.csv  co2-per-capita-vs-renewable-electricity.csv  data_size.ipynb  investment-in-renewable-energy-by-technology.csv  renewable-energy-consumption.csv  renewable-energy-gen.csv
Data/milestone 1/: HC 1.1.xlsx
scratch/: colors.ipynb
static_draft/: draft.md  milestone2.ipynb
static_final/: final.ipynb
