[tool.poetry]
name = "staticviz"
version = "0.1.0"
description = ""
authors = ["mmbarros-git <mmbarros@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
black = "^24.8.0"
altair = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
